--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -47,6 +47,7 @@
             android:paddingHorizontal="20dp"
             android:orientation="horizontal">
             <EditText
+                android:textColor="#000"
                 android:layout_width="0dp"
                 android:layout_height="55dp"
                 android:layout_weight="1"
